--- a/experiment/simulation/css/main.css
+++ b/experiment/simulation/css/main.css
@@ -1,98 +1,103 @@
-    .formal-container {
-      width: 300px; /* Small width */
-      padding: 20px;
-      background-color: #ffffff;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-family: 'Georgia', 'Times New Roman', serif; /* Formal font */
-      font-size: 16px;
-      line-height: 1.6;
-      text-align: left; /* Left aligned text */
-      color: #333;
-            margin-left: auto;
-      margin-right: 0;
-    }
+/* Global Reset and Font Family */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Georgia', 'Times New Roman', serif;
+}
 
+body {
+  background-color: #f7f7f7;
+  line-height: 1.6;
+}
 
-
+.formal-container {
+  width: 300px;
+  padding: 20px;
+  background-color: #ffffff;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  font-size: 16px;
+  line-height: 1.6;
+  text-align: left;
+  color: #333;
+  margin-left: auto;
+  margin-right: 0;
+}
 
 .caption {
-        text-align: center;
-        font-family: 'Georgia', serif;
-        font-size: 14px;
-        margin-top: 8px;
-        color: #444;
-    }
-
-
-
-
-
-/* You CSS goes in here */
-*{
-    padding: 0%;
-    margin: 0%; 
-    box-sizing: border-box;
+  text-align: center;
+  font-size: 14px;
+  margin-top: 8px;
+  color: #444;
 }
-.sidepanel  {
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    height: 250px;
-    top: 25px;
-    right: 0;
-    background-color: #d5a45e;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 35px;
-  }
-  #lists{
-    margin-left: 20px;
-    padding: 8px 8px 8px 32px;
-    color:white;
-  }
-  .sidepanel a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #fff7f7;
-    display: block;
-    transition: 0.3s;
-  }
-  
-  .sidepanel a:hover {
-    color: #6b6969;
-  }
-  
-  .sidepanel .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-  }
-  
-  .openbtn {
-    font-size: 20px;
-    cursor: pointer;
-    background-color: #d21b7a;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-  }
-  
-  .openbtn:hover {
-    background-color:#444;
-  }
-  li{
-    margin:20px;
-  }
 
+#material1Caption {
+  margin: 10px;
+  padding: 15px 0 15px 10px;
+}
 
-  .m{
-    color: rgb(35, 33, 33);
-  }
-        
-  .button {
+.sidepanel {
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  height: 250px;
+  top: 25px;
+  right: 0;
+  background-color: #d5a45e;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 35px;
+}
+
+#lists {
+  margin-left: 20px;
+  padding: 8px 8px 8px 32px;
+  color: white;
+}
+
+.sidepanel a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #fff7f7;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidepanel a:hover {
+  color: #6b6969;
+}
+
+.sidepanel .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+}
+
+.openbtn {
+  font-size: 20px;
+  cursor: pointer;
+  background-color: #d21b7a;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+}
+
+.openbtn:hover {
+  background-color: #444;
+}
+
+li {
+  margin: 20px;
+}
+
+.m {
+  color: rgb(35, 33, 33);
+}
+
+.button {
   border: none;
   color: white;
   padding: 5px 10px;
@@ -103,12 +108,11 @@
   margin: 4px 2px;
   transition-duration: 0.4s;
   cursor: pointer;
-  
 }
 
 .button1 {
-  background-color: white; 
-  color: black; 
+  background-color: white;
+  color: black;
   border: 2px solid #4CAF50;
 }
 
@@ -117,138 +121,105 @@
   color: white;
 }
 
-.allbox{
-    border:4px solid rgb(25, 78, 134);
-    border-radius: 25px;
-    margin:40px;
-    height: 100%;
-    margin-bottom: 20px;
-    padding: 30px;
-    box-shadow: 2px 2px 5px 4px black ;
-  }
-  .container{
-    display: flex;
-  }
-  
-  .main-section {
-    display: flex;
-    flex-direction: column;
-    /* background-color: rgba(252, 234, 153, 0.651); */
-    background-color:  bisque;
-    height: 1050px;
-    border-radius: 25px;
-    width: 50%;
-    margin: 2px;
-    margin-left: 0px;
-    border: 2px solid black;
-  }
+.allbox {
+  border: 4px solid rgb(25, 78, 134);
+  border-radius: 25px;
+  margin: 40px;
+  height: 2000px;
+  margin-bottom: 20px;
+  padding: 30px;
+  box-shadow: 2px 2px 5px 4px black;
+}
 
- .main-section2 {
-    display: flex;
-    flex-direction: column;
-    background-color:  bisque;
-    height: 1050px;
-    border-radius: 25px;
-    width: 150%;
-    margin: 2px;
-    margin-left: 0px;
-    margin-right:0px;
-    border: 2px solid black;
-  }
+.container {
+  display: flex;
+}
 
-  .main-section3 {
-    display: flex;
-    flex-direction: column;
-    background-color:bisque;
-    height: 330px;
-    border-radius: 25px;
-    width: 100%;
-    margin: 2px;
-    margin-left: 0px;
-    border: 2px solid black;
-  }
+.main-section, .main-section2, .main-section3 {
+  display: flex;
+  flex-direction: column;
+  background-color: bisque;
+  border-radius: 25px;
+  margin: 2px;
+  margin-left: 0px;
+  border: 2px solid black;
+}
 
-  .control-container{
-    display: flex;
-    flex-direction: column;
-    margin: 20px 0;
-    /* align-items: center; */
-    padding: 20px;
-  }
+.main-section {
+  height: 1500px;
+  width: 50%;
+}
 
-  
+.main-section2 {
+  height: 1500px;
+  width: 150%;
+  margin-right: 0;
+}
 
-.moveable {
-  width: 170px;
-  height: 129px;
-  /* background-color: blue; */
+.main-section3 {
+  height: 330px;
+  width: 100%;
+}
+
+.control-container {
+  display: flex;
+  flex-direction: column;
+  margin: 20px 0;
+  padding: 20px;
+}
+
+.moveable, .moveable3, .moveable5, .moveable6 {
   position: absolute;
   transition: transform 1s ease;
 }
 
-
-.target {
-  width: 257px;
+.moveable {
+  width: 170px;
   height: 129px;
-  /* background-color: red; */
-  position: absolute;
-  /* left: 100px; /* Adjust the target position as needed */
-  /* top: 50px; */ 
 }
 
 .moveable3 {
   width: 40px;
   height: 200px;
-  /* background-color: blue; */
-  position: absolute;
-  transition: transform 1s ease;
 }
 
+.moveable5 {
+  width: 124px;
+  height: 512px;
+}
+
+.moveable6 {
+  width: 170px;
+  height: 129px;
+}
+
+.target, .target3, .target5 {
+  position: absolute;
+}
+
+.target {
+  width: 257px;
+  height: 129px;
+}
 
 .target3 {
   width: 124px;
   height: 512px;
-  /* background-color: red; */
-  position: absolute;
-  /* left: 100px; /* Adjust the target position as needed */
-  /* top: 50px; */ 
-}
-  
-.moveable5{
-  width: 124px;
-  height: 512px;
-  /* background-color: blue; */
-  position: absolute;
-  transition: transform 1s ease;
 }
 
 .target5 {
   width: 55px;
   height: 220px;
-  /* background-color: red; */
-  position: absolute;
-  /* left: 100px; /* Adjust the target position as needed */
-  /* top: 50px; */ 
 }
 
-.moveable6{
-  width: 170px;
-  height: 129px;
-  /* background-color: blue; */
-  position: absolute;
-  transition: transform 1s ease;
-}
-
-.B[disabled]{
+.B[disabled] {
   background-color: gray;
   cursor: not-allowed;
 }
 
-.hidden{
+.hidden {
   display: none;
 }
-
-  
 
 #elementName {
   position: absolute;
@@ -257,68 +228,52 @@
   padding: 20px;
   text-align: center;
   display: none;
-  margin-inline:800px ;
+  margin-inline: 800px;
   margin-top: 300px;
 }
 
-
-/* frame css */
-
- /* Add CSS styles for image container */
- #image-container {
-  width: 200px; /* Adjust the width and height as needed */
+#image-container {
+  width: 200px;
   height: 100px;
   position: relative;
 }
 
-/* Add CSS styles for each SVG image */
 .svg-image {
   position: absolute;
   width: 100%;
   height: 100%;
   display: none;
-  /* transform:translate(1000px, 100px); */
 }
 
-
-/* material image show */
-
- /* Hide the result container and material photos by default */
- /* Container that holds everything */
 #resultContainer {
   display: none;
   width: 100%;
   max-width: 1000px;
-  height: 250px;
-  margin: 0px auto 0; /* Move up by 50px */
+  height: 650px;
+  margin: 0px auto 0;
   padding: 25px;
   background-color: #fff;
   box-sizing: border-box;
 }
 
-/* Slideshow containers */
-#material1Slideshow,
-#material2Slideshow {
+#material1Slideshow, #material2Slideshow {
   display: none;
   text-align: center;
 }
 
-/* Images */
 .slideshowImage {
   width: 100%;
   max-width: 400px;
-   object-fit: contain;
-  height: auto;
+  object-fit: contain;
+  height: 400px;
   border-radius: 12px;
   margin-bottom: 20px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
-/* Captions */
 .caption {
   font-size: 16px;
-  font-family: 'Georgia', serif;
   padding: 12px 16px;
   background-color: #fefefe;
   border: 1px solid #ddd;
@@ -331,7 +286,6 @@
   text-align: center;
 }
 
-/* Buttons */
 .slideshowButton {
   padding: 10px 18px;
   font-size: 15px;
@@ -348,13 +302,11 @@
   background-color: #3367d6;
 }
 
-/* Material selection button container */
 .materialSelector {
   margin-bottom: 30px;
   text-align: center;
 }
 
-/* Material switch buttons */
 .materialSelector button {
   margin: 0 10px;
   padding: 10px 18px;
@@ -373,7 +325,6 @@
   background-color: #555;
 }
 
-/* Help! video */
 .video-player {
   display: none;
   position: relative;
@@ -384,7 +335,6 @@ video {
   height: 800px;
   align-items: center;
   margin-left: 300px;
-
 }
 
 .close-button {
@@ -401,90 +351,78 @@ video {
   margin-top: 70px;
 }
 
-#moveButton8 ,#moveButton4, #out {
-  display: none; /* Initially hide the button */
-}
-
-.left{
-  display: flex;
-    flex-direction: column;
-    height: 215px;
-    width: 150%;
-    margin: 2px;
-    margin-left: 0px;
-    margin-right: 0px;
-    
-}
-
-.right{
-  display: flex;
-    flex-direction: column;
-   
-    height: 215px;
-    /* border-radius: 25px; */
-    width: 150%;
-    margin: 2px;
-    margin-left: 0px;
-    margin-right:0px;
-}
-
-.left-right{
-  display: flex;
-}
-
-.img1{
-    height: 190px;
-    border-radius: 25px;
-    width: 600px;
-    margin-left: 10px;
-    margin-top: 5px;
-    border: 3px solid black;
-}
-
-.img2{
-  height: 190px;
-    border-radius: 25px;
-    width: 600px;
-    margin-top: 5px;
-    border: 3px solid black;
-}
-
-@media only screen and (max-width: 1400px){
-
-  
-.img1{
-  height: 150px;
-  border-radius: 25px;
-  width: 350px;
-  margin-left: 10px;
-  margin-top: 5px;
-  border: 3px solid black;
-}
-
-.img2{
-height: 150px;
-  border-radius: 25px;
-  width: 350px;
-  margin-top: 5px;
-  border: 3px solid black;
-}
-}
-
-.img1:hover{
-  box-shadow: 0 0 20px 0px rgba(4,9,30,0.7);
-}  
-
-.img2:hover{
-  box-shadow: 0 0 20px 0px rgba(4,9,30,0.7);
-}  
-
-@media only screen and (max-width: 1100px){
-  #material1Photo,
-#material2Photo {
+#moveButton8, #moveButton4, #out {
   display: none;
-  width: 580px;
-  height: 310px;
-  align-items: center;
-  border: 5px solid rgba(0, 0, 0, 0.974); 
 }
+
+.left, .right {
+  display: flex;
+  flex-direction: column;
+  height: 215px;
+  width: 150%;
+  margin: 2px;
 }
+
+.left-right {
+  display: flex;
+}
+
+.img1, .img2 {
+  height: 190px;
+  border-radius: 25px;
+  width: 600px;
+  margin-top: 5px;
+  border: 3px solid black;
+}
+
+.img1 {
+  margin-left: 10px;
+}
+
+@media only screen and (max-width: 1400px) {
+  .img1, .img2 {
+    height: 150px;
+    width: 350px;
+  }
+}
+
+.img1:hover, .img2:hover {
+  box-shadow: 0 0 20px 0 rgba(4, 9, 30, 0.7);
+}
+
+@media only screen and (max-width: 1100px) {
+  #material1Photo, #material2Photo {
+    display: none;
+    width: 580px;
+    height: 310px;
+    align-items: center;
+    border: 5px solid rgba(0, 0, 0, 0.974);
+  }
+}
+
+.objective-container {
+  display: none;
+  margin-top: 20px;
+  padding: 15px;
+  border: 2px solid #FF5733;
+  border-radius: 8px;
+  background-color: #fff0f0;
+}
+
+.objective-list {
+  margin: 0;
+  padding-left: 20px;
+}
+
+.reveal-button {
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: greenyellow;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
+   /* Hidden by default; shown when button has .has-tick */
+  .tick { display: none; margin-left: 6px; font-weight: bold; color: green; }
+  .has-tick .tick { display: inline; }
