--- a/experiment/simulation/css/main.css
+++ b/experiment/simulation/css/main.css
@@ -418,7 +418,7 @@ video {
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
-  background-color: greenyellow;
+  background-color: blue;
   color: white;
   border: none;
   border-radius: 5px;
